# fs

./: .gitignore  README.md  config.example.json  pyproject.toml
backend/: __init__.py  operations.py  schedule.py
backend/frontend/: client.js  terminal.css  terminal.html
backend/frontend/js/: client.js  encryption.js  terminal.js
backend/handlers/: __init__.py  uploading.py
