[project]
name = "iipython-fs"
version = "0.3.7"
description = "Attempt at a blazing fast, privacy centered, and modern file sharing service."
authors = [
    { name = "iiPython", email = "ben@iipython.dev" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "nanoid>=2.0.0",
    "redis[hiredis]>=5.0.4",
    "apscheduler>=3.10.4",
    "python-multipart>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]
